--- a/package.json
+++ b/package.json
@@ -25,45 +25,46 @@
     "dependencies": {
         "classnames": "~2.2.6",
         "moment": "~2.22.2",
-        "react": "~16.4.1",
-        "react-dom": "~16.4.1",
+        "react": "~16.6.0",
+        "react-dom": "~16.6.0",
         "react-flip-move": "~3.0.2",
         "reset-css": "~4.0.1"
     },
     "devDependencies": {
-        "@babel/core": "~7.0.0-beta.54",
-        "@babel/plugin-proposal-class-properties": "~7.0.0-beta.54",
-        "@babel/plugin-proposal-decorators": "~7.0.0-beta.54",
+        "@babel/core": "^7.1.2",
+        "@babel/plugin-proposal-class-properties": "~7.1.0",
+        "@babel/plugin-proposal-decorators": "~7.1.2",
         "@babel/plugin-proposal-function-bind": "~7.0.0-beta.54",
         "@babel/plugin-proposal-object-rest-spread": "~7.0.0-beta.54",
         "@babel/polyfill": "~7.0.0-beta.54",
-        "@babel/preset-env": "~7.0.0-beta.54",
+        "@babel/preset-env": "~7.1.0",
         "@babel/preset-react": "~7.0.0-beta.54",
         "@babel/register": "~7.0.0-beta.54",
-        "babel-core": "^7.0.0-0",
-        "babel-eslint": "~8.2.6",
-        "babel-jest": "~23.4.0",
-        "babel-loader": "^7.1.5",
+        "babel-core": "7.0.0-bridge.0",
+        "babel-eslint": "~10.0.1",
+        "babel-jest": "^23.6.0",
+        "babel-loader": "^8.0.4",
+        "babel-plugin-transform-export-extensions": "^6.22.0",
         "chalk": "~2.4.1",
         "clean-webpack-plugin": "~0.1.19",
         "cross-env": "~5.2.0",
-        "css-loader": "~1.0.0",
+        "css-loader": "~1.0.1",
         "css-mqpacker": "~7.0.0",
-        "cssnano": "~4.0.3",
-        "enzyme": "~3.3.0",
-        "enzyme-adapter-react-16": "~1.1.0",
+        "cssnano": "~4.1.7",
+        "enzyme": "~3.7.0",
+        "enzyme-adapter-react-16": "~1.6.0",
         "enzyme-to-json": "~3.3.4",
-        "eslint": "~5.1.0",
-        "eslint-plugin-react": "~7.10.0",
+        "eslint": "~5.8.0",
+        "eslint-plugin-react": "~7.11.1",
         "favicons-webpack-plugin": "~0.0.9",
-        "file-loader": "~1.1.11",
-        "gh-pages": "~1.2.0",
+        "file-loader": "~2.0.0",
+        "gh-pages": "~2.0.1",
         "git-repo-name": "~0.6.0",
         "html-webpack-plugin": "~3.2.0",
         "html-webpack-template": "~6.2.0",
         "identity-obj-proxy": "~3.0.0",
-        "jest": "~23.4.1",
-        "jest-runner-eslint": "~0.6.0",
+        "jest": "^23.6.0",
+        "jest-runner-eslint": "~0.7.1",
         "jest-runner-stylelint": "~1.0.0",
         "mini-css-extract-plugin": "~0.4.1",
         "nodemon": "~1.18.3",
@@ -71,19 +72,19 @@
         "postcss-easing-gradients": "~3.0.0",
         "postcss-font-smoothing": "~0.1.0",
         "postcss-icss-selectors": "~2.0.3",
-        "postcss-import": "~11.1.0",
-        "postcss-loader": "~2.1.6",
-        "postcss-preset-env": "~5.2.2",
-        "postcss-reporter": "~5.0.0",
+        "postcss-import": "~12.0.1",
+        "postcss-loader": "~3.0.0",
+        "postcss-preset-env": "~6.3.0",
+        "postcss-reporter": "~6.0.0",
         "prettier-eslint-cli": "~4.7.1",
         "prop-types": "~15.6.1",
-        "react-dev-utils": "~5.0.1",
+        "react-dev-utils": "~6.1.0",
         "react-hot-loader": "~4.3.3",
-        "style-loader": "~0.21.0",
-        "stylelint": "~9.3.0",
-        "url-loader": "~1.0.1",
-        "webpack": "~4.16.1",
-        "webpack-bundle-analyzer": "~2.13.1",
+        "style-loader": "~0.23.1",
+        "stylelint": "~9.7.0",
+        "url-loader": "~1.1.2",
+        "webpack": "~4.23.1",
+        "webpack-bundle-analyzer": "~3.0.3",
         "webpack-cli": "~3.1.0",
         "webpack-dev-server": "~3.1.4",
         "webpack-merge": "~4.1.3",
